ErrorDocument issues fixed.

--- a/setupfiles/configfiles/httpd.conf
+++ b/setupfiles/configfiles/httpd.conf
@@ -325,23 +325,23 @@ TraceEnable off
 	DefaultType application/x-httpd-php
 
 #Following lines tells the server to load the specified URLs in case of errors (having the mentioned error codes)
-	ErrorDocument 400 /app/error/404?e=400
-	ErrorDocument 401 /app/error/404?e=401
-	ErrorDocument 402 /app/error/404?e=402
-	ErrorDocument 403 /app/error/404?e=403
-	ErrorDocument 404 /app/error/404?e=404
-	ErrorDocument 405 /app/error/404?e=405
-	ErrorDocument 406 /app/error/404?e=406
-	ErrorDocument 407 /app/error/404?e=407
-	ErrorDocument 408 /app/error/404?e=408
-	ErrorDocument 410 /app/error/404?e=410
-	ErrorDocument 413 /app/error/404?e=413
-	ErrorDocument 414 /app/error/404?e=414
-	ErrorDocument 415 /app/error/404?e=415
-	ErrorDocument 416 /app/error/404?e=416
-	ErrorDocument 419 /app/error/404?e=419
-	ErrorDocument 424 /app/error/404?e=424
-	ErrorDocument 426 /app/error/404?e=426
+	ErrorDocument 400 /error/404?e=400
+	ErrorDocument 401 /error/404?e=401
+	ErrorDocument 402 /error/404?e=402
+	ErrorDocument 403 /error/404?e=403
+	ErrorDocument 404 /error/404?e=404
+	ErrorDocument 405 /error/404?e=405
+	ErrorDocument 406 /error/404?e=406
+	ErrorDocument 407 /error/404?e=407
+	ErrorDocument 408 /error/404?e=408
+	ErrorDocument 410 /error/404?e=410
+	ErrorDocument 413 /error/404?e=413
+	ErrorDocument 414 /error/404?e=414
+	ErrorDocument 415 /error/404?e=415
+	ErrorDocument 416 /error/404?e=416
+	ErrorDocument 419 /error/404?e=419
+	ErrorDocument 424 /error/404?e=424
+	ErrorDocument 426 /error/404?e=426
 
 #
 # Possible values for the Options directive are "None", "All",
