--- a/setupfiles/configfiles/httpd.conf
+++ b/setupfiles/configfiles/httpd.conf
@@ -321,6 +321,8 @@ TraceEnable off
 
 <Directory "/var/www/html">
 
+DirectoryIndex index
+
 #Following "DefaultType" says the webserver to treat all files as PHP even if the file is without *.php extension
 	DefaultType application/x-httpd-php
 
