Apache httpd conf file corrected to work even for files without extensions.

--- a/setupfiles/configfiles/httpd.conf
+++ b/setupfiles/configfiles/httpd.conf
@@ -290,7 +290,7 @@ UseCanonicalName Off
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/var/www/html"
+DocumentRoot "/var/www/html/app"
 
 #
 # Each directory to which Apache has access can be configured with respect
@@ -318,13 +318,19 @@ DocumentRoot "/var/www/html"
 
 #READ THIS : http://httpd.apache.org/docs/2.2/mod/core.html#traceenable
 TraceEnable off
+<Directory "/var/www/html/app">
 
-<Directory "/var/www/html">
+DirectoryIndex index index.php index.html
+RewriteEngine On
+RewriteRule ^/?$ index [L]
 
-DirectoryIndex index index.php
+<FilesMatch "^(?!.*\..+)">
+    SetHandler php5-script
+</FilesMatch>
 
 #Following "DefaultType" says the webserver to treat all files as PHP even if the file is without *.php extension
-	DefaultType application/x-httpd-php
+#	DefaultType application/x-httpd-php
+#	DefaultType php5-script
 
 #Following lines tells the server to load the specified URLs in case of errors (having the mentioned error codes)
 	ErrorDocument 400 /error/404?e=400
@@ -881,7 +887,7 @@ AddOutputFilter INCLUDES .shtml
 # copying them to /your/include/path/, even on a per-VirtualHost basis.
 #
 
-Alias /error/ "/var/www/error/"
+#Alias /error/ "/var/www/error/"
 
 <IfModule mod_negotiation.c>
 <IfModule mod_include.c>
