updated with new vhosts

--- a/setupfiles/configfiles/httpd.conf
+++ b/setupfiles/configfiles/httpd.conf
@@ -1042,3 +1042,31 @@ BrowserMatch "^Dreamweaver-WebDAV-SCM1" redirect-carefully
 #    ErrorLog logs/dummy-host.example.com-error_log
 #    CustomLog logs/dummy-host.example.com-access_log common
 #</VirtualHost>
+
+NameVirtualHost *:80
+
+<VirtualHost *:80>
+DocumentRoot /var/www/html
+ServerName sit.churchstack.com
+
+# Other directives here
+
+</VirtualHost>
+
+
+<VirtualHost *:80>
+DocumentRoot /var/www/html/app
+ServerName account.sit.churchstack.com
+
+# Other directives here
+
+</VirtualHost>
+
+<VirtualHost *:80>
+DocumentRoot /var/www/html
+ServerName portal.sit.churchstack.com
+
+# Other directives here
+
+</VirtualHost>
+
