--- a/setupfiles/configfiles/httpd.conf
+++ b/setupfiles/configfiles/httpd.conf
@@ -434,7 +434,7 @@ RewriteRule ^/?$ index [L]
 # negotiated documents.  The MultiViews Option can be used for the 
 # same purpose, but it is much slower.
 #
-DirectoryIndex index.html index.html.var
+DirectoryIndex index.php index.html index.html.var
 
 #
 # AccessFileName: The name of the file to look for in each directory
