1) Received Amount in "Funds" - issue fixed.  2) httpd.conf and ssl.conf files with working and existing content committed.

--- a/setupfiles/account.churchstack.com/configfiles/httpd.conf
+++ b/setupfiles/account.churchstack.com/configfiles/httpd.conf
@@ -93,7 +93,7 @@ Header set X-Robots-Tag "noindex, nofollow"
 #
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
-#ServerName www.example.com:80
+#ServerName account.churchstack.com:80
 
 #
 # Deny access to the entirety of your server's filesystem. You must
@@ -117,7 +117,7 @@ Header set X-Robots-Tag "noindex, nofollow"
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/var/www/html/app"
+DocumentRoot "/var/www/html"
 
 #
 # Relax access to content within /var/www.
@@ -127,6 +127,32 @@ DocumentRoot "/var/www/html/app"
     # Allow open access:
   #  Require all granted
 #</Directory>
+
+
+<Directory "/var/www/html">
+
+        DirectoryIndex index index.php index.html
+        RewriteEngine On
+        RewriteCond %{HTTPS} off
+        RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+#        RewriteRule ^/?$ index [L]
+
+        <FilesMatch "^(?!.*\..+)">
+        SetHandler php5-script
+        </FilesMatch>
+
+        #Following "DefaultType" says the webserver to treat all files as PHP even if the file is without *.php extension
+        #       DefaultType application/x-httpd-php
+        #       DefaultType php5-script
+        #Following lines tells the server to load the specified URLs in case of errors (having the mentioned error codes)
+#       Options FollowSymLinks
+#       AllowOverride None
+    Require all granted
+#       Order allow,deny
+#       Allow from all
+
+</Directory>
+
 
 # Further relax access to the default document root:
 <Directory "/var/www/html/app">
@@ -378,11 +404,11 @@ IncludeOptional conf.d/*.conf
 
 #</VirtualHost>
 
-#<VirtualHost *:80>
-#DocumentRoot /var/www/html
-#ServerName portal.churchstack.com
-#Header set X-Robots-Tag "noindex, nofollow"
+<VirtualHost *:80>
+DocumentRoot /var/www/html
+ServerName portal.churchstack.com
+Header set X-Robots-Tag "noindex, nofollow"
 
 # Other directives here
 
-#</VirtualHost>
+</VirtualHost>
