1) php fatal error fixed in event alerts sending file. 2) apache and php setup files updated.

--- a/setupfiles/account.churchstack.com/configfiles/ssl.conf
+++ b/setupfiles/account.churchstack.com/configfiles/ssl.conf
@@ -101,8 +101,9 @@ SSLProtocol all -SSLv2
 # Point SSLCertificateFile at a PEM encoded certificate.  If
 # the certificate is encrypted, then you will be prompted for a
 # pass phrase.  Note that a kill -HUP will prompt again.  A new
-# certificate can be generated using the genkey(1) command.
+## certificate can be generated using the genkey(1) command.
 SSLCertificateFile /etc/pki/tls/certs/localhost.crt
+#SSLCertificateFile /etc/ssl/certs/account.churchstack.com.crt
 
 #   Server Private Key:
 #   If the key is not combined with the certificate, use this
@@ -110,6 +111,7 @@ SSLCertificateFile /etc/pki/tls/certs/localhost.crt
 #   you've both a RSA and a DSA private key you can configure
 #   both in parallel (to also allow the use of DSA ciphers, etc.)
 SSLCertificateKeyFile /etc/pki/tls/private/localhost.key
+#SSLCertificateKeyFile /etc/ssl/certs/ssl_cert_new.key 
 
 #   Server Certificate Chain:
 #   Point SSLCertificateChainFile at a file containing the
@@ -269,14 +271,16 @@ SSLProtocol all -SSLv2
 # the certificate is encrypted, then you will be prompted for a
 # pass phrase.  Note that a kill -HUP will prompt again.  A new
 # certificate can be generated using the genkey(1) command.
-SSLCertificateFile /etc/pki/tls/certs/localhost.crt
+#SSLCertificateFile /etc/pki/tls/certs/localhost.crt
+SSLCertificateFile /etc/ssl/certs/account.churchstack.com.crt
 
 #   Server Private Key:
 #   If the key is not combined with the certificate, use this
 #   directive to point at the key file.  Keep in mind that if
 #   you've both a RSA and a DSA private key you can configure
 #   both in parallel (to also allow the use of DSA ciphers, etc.)
-SSLCertificateKeyFile /etc/pki/tls/private/localhost.key
+#SSLCertificateKeyFile /etc/pki/tls/private/localhost.key
+SSLCertificateKeyFile /etc/ssl/certs/ssl_cert_new.key
 
 #   Server Certificate Chain:
 #   Point SSLCertificateChainFile at a file containing the
@@ -286,12 +290,14 @@ SSLCertificateKeyFile /etc/pki/tls/private/localhost.key
 #   when the CA certificates are directly appended to the server
 #   certificate for convinience.
 #SSLCertificateChainFile /etc/pki/tls/certs/server-chain.crt
+#SSLCertificateChainFile /etc/ssl/certs/bundle.crt
 
 #   Certificate Authority (CA):
 #   Set the CA certificate verification path where to find CA
 #   certificates for client authentication or alternatively one
 #   huge file containing all of them (file must be PEM encoded)
 #SSLCACertificateFile /etc/pki/tls/certs/ca-bundle.crt
+SSLCACertificateFile /etc/ssl/certs/bundle.crt
 
 #   Client Authentication (Type):
 #   Client certificate verification type and depth.  Types are
